@@ -1,3 +1,6 @@
+Jun 02, 2022
+  updated BulkGeneMerge
+
 Mar 10, 2022
   added log 'aliases'
 
